kubs/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /sea-store
            pathType: Prefix
            backend:
              service: 
                name: go-fish-cluster-ip
                port:
                  number: 8090
